# IHG-Product-Search

./: README.md  pyproject.toml
igh_search/: hooks.py  modules.txt
igh_search/fixtures/: custom_field.json
igh_search/igh_search/: ai_product_search.py  api.py  product_search_v2.py  search_normalization.py  test_ai_product_search.py  test_product_search_v2.py  test_search_normalization.py
igh_search/igh_search/data/: ai_product_search_benchmark.json  typesense_synonyms.json
igh_search/igh_search/doctype/ai_product_search_event/: ai_product_search_event.json  ai_product_search_event.py
igh_search/igh_search/doctype/typesense_settings/: test_typesense_settings.py  typesense_settings.js  typesense_settings.json  typesense_settings.py
igh_search/igh_search/doctype/typesense_sync_log/: test_typesense_sync_log.py  typesense_sync_log.json  typesense_sync_log.py
igh_search/igh_search/doctype/typesense_synchronisation_settings/: test_typesense_synchronisation_settings.py  typesense_synchronisation_settings.js  typesense_synchronisation_settings.json  typesense_synchronisation_settings.py
igh_search/public/css/: igh_search.css
