[project]
name = "igh_search"
authors = [
    { name = "Aerele", email = "hello@aerele.in" }
]
description = "Integration with Typesense"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "typesense~=0.21.0",  # Typesense Python client
    # This app is compatible with Frappe/ERPNext v15
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Development dependencies
[tool.bench.dev-dependencies]
# Example: pytest = "~=7.4"
